Fix color contrast

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ form ul {
   font-weight: 700px;
   font-size: 18px;
   line-height: 20px;
-  color: #6070ff;
+  color: #0f27ff;
   text-decoration: none;
 }
 
@@ -121,7 +121,7 @@ h1 {
 }
 
 .connect {
-  color: #7f8cff;
+  color: #0f27ff;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -199,7 +199,7 @@ h1 {
   line-height: 24px;
   letter-spacing: 0 em;
   text-align: left;
-  color: #7a869a;
+  color: #4f5769;
   float: left;
   padding-right: 9%;
 }
@@ -226,7 +226,7 @@ h1 {
   padding: 2% 3%;
   border-radius: 8px;
   border-color: #ebebff;
-  color: #6070ff;
+  color: #001aff;
   float: left;
   list-style-type: none;
   background-color: #ebebff;
@@ -336,7 +336,7 @@ h1 {
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
-  color: #344563;
+  color: #485160;
 }
 
 .aboutme p {
@@ -357,7 +357,7 @@ h1 {
   color: #344563;
 }
 
-.headline h2 {
+h4 {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -401,7 +401,7 @@ h1 {
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: #6070ff;
+  color: #142cff;
   background-color: hsl(0, 0%, 100%);
   width: auto;
   margin-right: auto;
@@ -435,7 +435,7 @@ button:active {
 
 .background {
   width: 100%;
-  background-color: #6070ff;
+  background-color: #051eff;
   border-top-left-radius: 11%;
   display: flex;
   margin-top: 10%;
@@ -713,7 +713,7 @@ textarea {
   }
 
   .connect {
-    color: #7f8cff;
+    color: #001aff;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 500;
@@ -1061,13 +1061,5 @@ textarea {
     justify-content: center;
     margin-top: 2%;
     padding-bottom: 2%;
-  }
-}
-@keyframes grow {
-  0% {
-    font-size: 0;
-  }
-  100% {
-    font-size: 40px;
   }
 }
